Change History
==============

1.5 (unreleased)
----------------

- LP #503686: Added support for setting ZEO log level.
  [baijum]

- Added note on 'eggs' option.
  [ajung]

1.4 (2009-10-15)
----------------

* Make sure that it's still possible to specify a storage to pack using the -S
  parameter for bin/zeopack.
  [davisagli]

* Documented the format of the authentication database file.
  [hannosch]

* Added support for more than one zeoinstance per buildout on win32 environments
  [erico_andrei]

* Added support for relative-paths in the script generation.
  [jvloothuis]

1.3 (2009-05-14)
----------------

* Added the new `pack-days`, `pack-user` and `pack-password` options to give
  more flexible options for the zeopack script and support packing databases
  which require authentication. Also reworked the zeopack internals to support
  packing blob storages. The default for packing is now to retain one day of
  database history.
  [hannosch]

1.2 (2009-02-25)
----------------

* Generate a bin/repozo script to perform backups using repozo.py (and
  set up the appropriate pythonpath for this to work).
  Copied from plone.recipe.zope2instance.
  [fschulze]

* Added support for the zeo.conf 'monitor-address' parameter.
  [mattss]

1.1 (2008-12-05)
----------------

* Pass PYTHONPATH generated by recipe into zopeservice.py, so that it
  is properly setup and passed to service controlled environment. This
  makes it possible to use third-party ZConfig extensions with ZEO,
  like iw.rotatezlogs.
  [sidnei]

1.0 (2008-11-04)
----------------

* Bump version number to 1.0 since this has been stable for a long time.
  [wichert]

* Add MANIFEST.in file so we can create a release from an export.
  [wichert]


0.17 (2008-11-04)
-----------------

- Make the log format configurable and change the default to include the
  current time.
  [wichert]


0.16 (2008-10-15)
-----------------

- Adjusted the Supervisord support to ignore the command sent to the script.