@@ -4,5 +4,5 @@ parts = test
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = plone.recipe.zope2zeoserver
+eggs = plone.recipe.zope2zeoserver [testing]
 
